--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -22,15 +22,15 @@
     left: 15px;
 }
 
-.header-container_middle > button {
+.header-container_middle > a {
     background-color: transparent;
     border-radius: 20px;
+    text-decoration: none;
     border: 1px solid white;
     color: white;
-    width: 120px;
-    height: 30px;
-    margin-bottom: 10px;
-    cursor: pointer;
+    padding-inline: 40px;
+    padding-top: 3px;
+    padding-bottom: 8px;
 }
 .header-container_middle > button:hover {
     background-color: rgb(238, 145, 58);
