--- a/src/Header/SignUp/signup.css
+++ b/src/Header/SignUp/signup.css
@@ -96,4 +96,20 @@
     width: 300px;
     background-color: rgb(21, 125, 243);
     margin-bottom: 50px;
+    height: 40px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.signup-submit > a {
+    text-decoration: none;
+    color: white;
+}
+
+.signup-container-bigmiddle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
