--- a/src/Header/SignUp/signup.css
+++ b/src/Header/SignUp/signup.css
@@ -113,3 +113,8 @@
     flex-direction: column;
     align-items: center;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button{
+    -webkit-appearance: none;
+}
