--- a/src/Header/LogIn/login.css
+++ b/src/Header/LogIn/login.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     position:fixed;
-    background: rgba(112, 112, 112, 0.8);
+    background: rgba(112, 112, 112, 0.9);
     overflow-y: auto;
     top: 0;
     left: 0%;
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 600px;
+    width: 400px;
 }
 
 .login-container_top {
@@ -30,4 +30,23 @@
 
 .login-container_top > h3 {
     font-size: 30px;
+}
+
+.login-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    width: 400px;
+    height: 400px;
+    background-color: rgb(255, 129, 127);
+}
+
+.login-form > label > input {
+    width: 350px;
+    height: 35px;
+    border-radius: 7px;
+    border: 1px solid black;
+    padding-left: 10px;
 }
