--- a/src/main/main.css
+++ b/src/main/main.css
@@ -8,18 +8,8 @@
     line-height: 0px;
 }
 
-@media (min-width: 1000px) {
-    .pound-amount {
-        font-size: 80px;
-        margin-top: 60px;
-        line-height: 0px;
-    }
-    .main-top-p {
-        font-size: 30px;
-    }
-}
-
-.donate-menu, .donate-details {
+.donate-menu, .donate-details , .donate-payment-details{
+    width: 450px;
     background-color: white;
     border-radius: 20px;
     display: flex;
@@ -70,7 +60,7 @@
     width: 270px;
     height: 75px;
     border-radius: 7px;
-    border: 1px solid black;
+    border: 1px solid silver;
     font-size: 20px;
     padding-left: 5px;
 }
@@ -154,3 +144,37 @@
     background-color: rgb(221, 111, 8);
     color: white;
 }
+
+@media (min-width: 1000px) {
+    .pound-amount {
+        font-size: 80px;
+        margin-top: 60px;
+        line-height: 0px;
+    }
+    .main-top-p {
+        font-size: 30px;
+    }
+    .donate-menu, .donate-details {
+        width: 600px;
+    }
+    
+    .donate-menu-form-div {
+        width: 160px;
+    }
+
+    .donate-menu-form {
+        gap: 30px;
+    }
+
+}
+
+.credit-card {
+    width: 360px;
+    height: 400px;
+    margin: 60px auto 0;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    background-color: #fff;
+    box-shadow: 1px 2px 3px 0 rgba(0,0,0,.10);
+}
+
