--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     height: 110px;
+    width: 100%;
     background-color:rgb(221, 111, 8);
 }
 
