--- a/src/main/donatorslist/donatorlist.css
+++ b/src/main/donatorslist/donatorlist.css
@@ -6,6 +6,12 @@
     border-radius: 15px;
 }
 
+.donators-fulllist-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .donators-list-filter {
     display: flex;
     justify-content: center;
@@ -64,8 +70,36 @@
     line-height: 0px;
 }
 
+.donatorlist-showmoreless {
+    background-color: transparent;
+    color: rgb(90, 90, 90);
+    border: 1px solid rgb(33, 147, 185);
+    font-weight: 300;
+    letter-spacing: 2px;
+    margin-top:20px;
+}
+
+.donatorlist-Link {
+    color: rgb(90, 90, 90);
+    border: 1px solid rgb(33, 147, 185);
+    font-weight: 300;
+    letter-spacing: 2px;
+    margin-top:20px;
+    text-decoration: none;
+    padding: 13px;
+    border-radius: 10px;
+    width: 130px;
+    text-align: center;
+}
+
+.showmore-less-donators {
+    display: flex;
+    justify-content: space-around;
+}
+
 @media (min-width: 1000px) {
     .donators-list-container {
         width: 570px;
     }
 }
+
