--- a/src/main/donatorslist/donatorlist.css
+++ b/src/main/donatorslist/donatorlist.css
@@ -10,6 +10,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 50px;
+    margin-bottom: 200px;
 }
 
 .donators-list-filter {
@@ -18,7 +20,7 @@
     gap: 20px;
     border: 1px solid silver;
     border-radius: 20px;
-    background-color: rgb(189, 235, 250);;
+    background-color: rgb(189, 235, 250);
 }
 
 .donators-list-filter > button {
