--- a/src/SideBarMenu/barmenu.css
+++ b/src/SideBarMenu/barmenu.css
@@ -25,7 +25,7 @@
 }
 
 .donate-container {
-    width: 400px;
+    width: 80%;
     border: 1px solid white;
     border-radius: 10px;
     padding: 20px;
@@ -65,6 +65,12 @@
     flex-direction: column;
     gap: 50px;
     margin-left: 20px;
+}
+
+@media (min-width:700px) {
+    .donate-container {
+        width: 600px;
+    }
 }
 
 
