second page changes

--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -35,10 +35,20 @@
     background-color: rgb(238, 145, 58);
 }
 
-.header-middle_container {
+.header-loggedIn_container > div {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    gap: 10px;
+    align-items: center;
+    gap: 20px;
+}
+
+.header-loggedIn_container > div > div {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.header-loggedIn_container > div > a {
+    text-decoration: none;
+    color: white;
+    border-bottom: 1px solid white;
 }
