--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,11 @@
   justify-content: center;
   align-items: center;
   gap: 40px;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 
 #root {
-  background-color: rgb(41, 11, 80);
   overflow-x: hidden;
 }
 
